syntax = "proto3";

package calculator;

option java_package="com.proto.calculator";
option java_multiple_files = true;

message Inputs {
    int32 first_number = 1;
    int32  second_number = 2;
}

message CalculatorRequest {
    Inputs inputs =1;
}

message CalculatorResponse {
    int32 sum = 1;
}

message PrimeNumberRequest {
    int32 input = 1;
}
message PrimeNumberResponse {
    int32 result  = 1;
}

message AverageRequest {
    double input = 1;
}

message AveragreResponse {
    double result =1;
}
message SquareRootRequest {
    int32 number = 1;
}
message SquareRootResponse {
    double root_num = 1;
}

service CalculatorService {
    rpc Calculator(CalculatorRequest) returns (CalculatorResponse) {};

    rpc PrimeNumer(PrimeNumberRequest) returns (stream PrimeNumberResponse){};

    rpc Avergae(stream AverageRequest) returns (AveragreResponse){};

    // Error handling
    // his RPC will throw an exception if the sent number is negative
    rpc SquareRoot (SquareRootRequest) returns (SquareRootResponse){};
}